# UART

./: .gitignore  CMakeLists.txt  README.md
include/: testbench.h  uart_tlm.h
src/: sc_main.cpp  uart_tlm.cpp
testbench/: testbench.cpp
